[package]
name = "iro"
version = "0.1.0"
authors = ["ffwff <mogamiriver@tuta.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.18.1"
unicode-xid = "0.1.0"
maplit = "1.0.2"
downcast-rs = "1.1.1"
libc = "0.2.68"

[dev-dependencies]
tempfile = "3.1.0"
lazy_static = "1.4.0"

[build-dependencies]
lalrpop = "0.18.1"
