[package]
name = "iro"
version = "0.1.0"
authors = ["ffwff <mogamiriver@tuta.io>"]
edition = "2018"
build = "build.rs"

[profile.release]
debug = true
panic = "abort"

[dependencies]
lalrpop-util = "0.18.1"
unicode-xid = "0.1.0"
maplit = "1.0.2"
downcast-rs = "1.1.1"
libc = "0.2.68"
cranelift = "0.61.0"
cranelift-native = "0.61.0"
cranelift-module = "0.61.0"
cranelift-codegen ="0.61.0"
cranelift-frontend ="0.61.0"
cranelift-simplejit = "0.61.0"
cranelift-object = "0.61.0"
tempfile = "3.1.0"
target-lexicon = "0.10.0"
derivative = "2.1.1"
take_mut = "0.2.2"
codespan-reporting = "0.9.2"
bit-set = "0.5.1"

[dev-dependencies]
lazy_static = "1.4.0"

[build-dependencies]
lalrpop = "0.18.1"
